# libstrwrap

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  estrtok.c  estrtok_r.c  makeargv.c  strtok_r.c  strtrim.c  strwrap.h  va_makeargv.c
